# SRAC-Agent

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  index.html  llms.txt  main.py  pyproject.toml  requirements.txt  robots.txt  sitemap.xml
.github/workflows/: indexnow.yml
srac_ipd/: __init__.py  agent.py  evolution.py  gui.py  ipd_game.py  network.py  parameters.py  statistics.py  visualization.py
